# Deaftone

./: .env  .gitignore  Cargo.toml  README.md  api_doc.json  settings.toml
.github/workflows/: audit.yml  build.yml  ci.yml  clippy-check.yml  deaftone.yml  release.yml  rust-clippy.yml  rust.yml
entity/: Cargo.toml
entity/src/: album.rs  albums.rs  artist.rs  artist_metadata.rs  artists.rs  cast_devices.rs  directories.rs  directory.rs  lib.rs  mod.rs  playlist.rs  playlist_song.rs  playlists.rs  playlists_song.rs  prelude.rs  setting.rs  song.rs  songs.rs
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  tailwind.config.js  tailwind.css
frontend/src/: data.rs  main.rs
frontend/src/components/: mod.rs  toast.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
src/: gen_openapi.rs  lib.rs  main.rs  test_util.rs
src/api/: albums.rs  stream.rs
src/database/: mod.rs
src/db/: album_repo.rs  mod.rs  song_repo.rs
src/handlers/: albums.rs  artists.rs  mod.rs  playlist.rs  songs.rs  stream.rs  streams.rs  tasks.rs
src/scanner/: metaflac.rs  mod.rs  scanner.rs  tag_helper.rs
src/services/: album.rs  artist.rs  device.rs  mod.rs  playlist.rs  song.rs
src/services/casting/: device.rs  mod.rs
src/services/http/: error.rs  mod.rs
src/services/http/handlers/: albums.rs  artists.rs  mod.rs  playlist.rs  songs.rs  streams.rs  tasks.rs
src/services/metadata/: mod.rs
src/services/scanner/: mod.rs  tag_helper.rs  tag_reader.rs
src/services/task/: mod.rs
src/settings/: mod.rs  settings.default.toml
src/task_service/: mod.rs
tests/: album_intergration_test.rs  artist_intergration_test.rs  song_intergration_test.rs  test_seed.sql
