[package]
name = "deaftone"
version = "0.0.2"
edition = "2021"
default-run = "deaftone"
[[bin]]
name = "deaftone"
path = "src/main.rs"
[[bin]]
name = "gen-openapi"
path = "src/gen_openapi.rs"
[profile.release]
lto = true
codegen-units = 1
[workspace]
members = [".", "entity", "migration"]
[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } 
axum = "0.6.2"
tokio = { version = "1.23.1", features = ["full"] }
tower-http = { version = "0.3.0", features = ["trace", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4.19"
anyhow = "1.0.58"
walkdir = "2.3.2"
metaflac = "0.2.5"
tokio-util = "0.7.3"
tower = "0.4.13"
serde = { version = "1.0"}
serde_json = { version = "1.0.71" }
axum-macros = "0.3.0"
tokio-stream = "0.1.9"
include_dir = "0.7.2"
config = "0.13.2"
futures = "0.3.24"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" ] }
hyper = { version = "0.14", features = ["client"] }
utoipa = { version = "2.4.2", features = ["axum_extras"] }
[dependencies.sea-orm]
version = "0.10.6" # sea-orm version
features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
]
[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
