[package]
name = "deaftone"
version = "0.0.3"
edition = "2021"
default-run = "deaftone"
[[bin]]
name = "deaftone"
path = "src/main.rs"
[[bin]]
name = "gen-openapi"
path = "src/gen_openapi.rs"
[profile.release]
lto = true
codegen-units = 1
[workspace]
members = [".", "entity", "migration"]
[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } 
axum = "0.6.7"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2.2"
chrono = "0.4.23"
anyhow = "1.0.69"
walkdir = "2.3.2"
metaflac = "0.2.5"
tokio-util = "0.7.7"
tower = "0.4.13"
serde = { version = "1.0.152"}
serde_json = { version = "1.0.93" }
axum-macros = "0.3.4"
tokio-stream = "0.1.12"
include_dir = "0.7.3"
config = "0.13.3"
futures = "0.3.26"
sqlx = { version = "0.6.2", features = [ "runtime-tokio-native-tls" ] }
hyper = { version = "0.14.24", features = ["client"] }
utoipa = { version = "3.0.3", features = ["axum_extras", "chrono", "uuid"] }
lazy_static = "1.4.0"
musicbrainz_rs = "0.5.0"
scraper = "0.15.0"
reqwest = { version = "0.11.14", features = ["blocking"] }

[dependencies.sea-orm]
version = "0.11.0" # sea-orm version
features = [
  "debug-print",
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
]
[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
