[package]
name = "entity"
version = "0.0.3"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "0.11.0" }
serde = { version = "1.0.152", features = ["derive"] }
utoipa = { version = "3.0.3", features = ["axum_extras"] }
serde_json = { version = "1.0.93" }
