[package]
name = "migration"
version = "0.0.3"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
entity = {path = "../entity"}
[dependencies.sea-orm-migration]
version = "0.12.2"
features = [
  "runtime-tokio-native-tls",
  "sqlx-sqlite",
]
